# warren

./: .env.dist  .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  docker-compose.yml  mkdocs.yml
.github/workflows/: api.yml  deploy-docs.yml  frontend.yml  release-api.yml  release-app.yml  service-api.yml  service-app.yml  service-docs.yml  service-frontend.yml  service-repo.yml
dev/: 404.html  index.html  sitemap.xml
dev/LICENSE/: index.html
dev/api/: index.html
dev/contribute/: index.html
dev/search/: search_index.json
dev/warren_tdbp_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: api.md  contribute.md  index.md  pyproject.toml
production/: README.md  docker-compose.prod.yml
production/env.d/: api.env
production/env_files/: api.env  postgresql.env
src/api/: Dockerfile  logging-config.dev.yaml  pyproject.toml
src/api/plugins/tdbp/: pyproject.toml
src/api/plugins/tdbp/tests/: conftest.py  factory.py  fixtures.py  test_api.py  test_indicators.py
src/api/plugins/tdbp/warren_tdbp/: __init__.py  api.py  conf.py  exceptions.py  indicators.py  models.py  utils.py
src/api/warren_tdbp/: api.py
src/api/warren_tdbp/tests/: conftest.py  test_base.py
src/app/: Dockerfile
src/frontend/: Dockerfile  package.json  turbo.json
src/frontend/apps/web/: package.json
src/frontend/apps/web/src/: App.tsx  index.scss
