#
# Warren Tableaux de Bord Pédagogiques (TdBP) package
#
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warren-tdbp"
description = "A warren plugin for moodle learning analytics dashboard."
readme = "README.md"
authors = [
  { name="APUI (Avignon University)", email="amelie.soubrat@univ-avignon.fr" },
  { name="Open FUN (France Universite Numerique)", email="fun.dev@fun-mooc.fr" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
keywords = ["Analytics", "xAPI", "LRS", "LTI", "Moodle"]
dependencies = [
    "warren-api",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/apui-avignon-university/warren-tdbp"
"Bug Tracker" = "https://github.com/apui-avignon-university/warren-tdbp/issues"

[project.optional-dependencies]
dev = [
    "black==23.11.0",
    "build==1.0.3",
    "freezegun==1.3.1",
    "httpx==0.24.1",
    "ipdb==0.13.13",
    "ipython==8.18.1",
    "polyfactory==2.12.0",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-httpx==0.22.0",
    "ruff==0.1.7",
    "mypy==1.7.1",
    "pandas-stubs==2.1.1.230928",
    "types-python-jose==3.3.4.8"
]
ci = [
    "twine==4.0.2",
]

[project.entry-points."warren.routers"]
tdbp = "warren_tdbp.api:router"

[tool.setuptools.dynamic]
version = { attr = "warren_tdbp.__version__" }
